<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="facebook_app_id" translatable="false">249736200867963</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb249736200867963</string>
    <string name="facebook_client_token" translatable="false">b33e09c7d3e77b20a2482c4ef0302cc4</string>
    <string name="home">Trang chủ</string>
    <string name="practice">Luyện tập</string>
    <string name="challenge">Thách đấu</string>
    <string name="news">Bảng tin</string>
    <string name="news_header">Tin tức</string>
    <string name="notification">Thông báo</string>
    <string name="no_internet">Chưa có kết nối mạng,vui lòng kiểm tra lại</string>
    <string name="server_error_or_no_internet">Mạng không ổn định hoặc kết nối bị lỗi.\nVui lòng kiểm tra lại kết nối mạng</string>
    <string name="practice_now">Tập ngay</string>
    <string name="punch">Đòn đánh</string>
    <string name="power">Sức mạnh</string>
    <string name="exactly">Chính xác</string>
    <string name="reflex">Phản xạ</string>
    <string name="laborious">Đòn đánh</string>
    <string name="efficiency">Hiệu suất</string>
    <string name="speed">Tốc độ</string>
    <string name="target">Mục tiêu</string>
    <string name="point_ranking">Điểm xếp hạng</string>
    <string name="ranking">Xếp hạng</string>
    <string name="top">Top</string>
    <string name="view">Xem</string>
    <string name="my_nick_name">Danh hiệu của tôi</string>
    <string name="yesterday">Hôm qua</string>
    <string name="feature_developing">Tính năng đang được phát triển</string>
    <string name="cal">Cal</string>
    <string name="number_of_kicks">Số cú đá</string>
    <string name="number_of_punches">Số đòn đánh</string>
    <string name="message">Tin nhắn</string>
    <string name="friend">Bạn bè</string>
    <string name="coach_mode">Chế độ HLV</string>
    <string name="my_group">Nhóm đã tham gia</string>
    <string name="assignments">Bài tập được giao</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="information">Thông tin</string>
    <string name="logout">Đăng xuất</string>
    <string name="back">Quay lại</string>
    <string name="server_error">Hệ thống đang quá tải,vui lòng thử lại sau</string>
    <string name="session_expired">Bạn đã hết phiên đăng nhập,vui lòng đăng nhập lại.</string>
    <string name="method_invalid">Server lỗi.Vui lòng liên hệ nhà phát triển</string>
    <string name="more">Xem thêm</string>
    <string name="collapse">Thu gọn</string>
    <string name="search">Tìm kiếm</string>
    <string name="sect">Môn phái</string>
    <string name="level">Cấp độ</string>
    <string name="sort">Sắp xếp</string>
    <string name="practice_revert">Tập luyện</string>
    <string name="faq">Hỏi đáp</string>
    <string name="cancel">Huỷ</string>
    <string name="fight_back">Đánh lại</string>
    <string name="save">Lưu</string>
    <string name="picture_error" translatable="false">图片已损坏</string>
    <string name="picture_video_error" translatable="false">视频已损坏</string>
    <string name="picture_audio_error" translatable="false">音频已损坏</string>
    <string name="file">Hồ sơ</string>
    <string name="name">Tên</string>
    <string name="date_of_birth">Ngày sinh</string>
    <string name="gender">Giới tính</string>
    <string name="height">Chiều cao</string>
    <string name="weight">Cân nặng</string>
    <string name="appellation">Danh hiệu</string>
    <string name="error_bluetooth_not_available">Bluetooth không khả dụng</string>
    <string name="error_bluetooth_disabled">Bật Bluetooth và thử lại</string>
    <string name="error_location_permission_missing">Chưa được cấp quyền để có thể quét bluetooth</string>
    <string name="error_location_services_disabled">Dịch vụ vị trí cần được bật trên Android 6.0</string>
    <string name="error_scan_failed_already_started">Quét với các bộ lọc tương tự đã được bắt đầu</string>
    <string name="error_scan_failed_application_registration_failed">Không đăng ký được ứng dụng quét bluetooth</string>
    <string name="error_scan_failed_feature_unsupported">Không hỗ trợ quét với các thông số đã chỉ định</string>
    <string name="error_scan_failed_internal_error">Quét không thành công do lỗi nội bộ</string>
    <string name="error_scan_failed_out_of_hardware_resources">Không thể bắt đầu quét do tài nguyên phần cứng hạn chế</string>
    <string name="error_undocumented_scan_throttle">Android 7+ không cho phép quét nhiều hơn.</string>
    <string name="error_undocumented_scan_throttle_retry">Thử lại sau %d giây</string>
    <string name="error_bluetooth_cannot_start">Không thể bắt đầu quét</string>
    <string name="error_bluetooth_device_not_found">Không tìm thấy thiết bị nào quanh đây.\nVui lòng kiểm tra lại kết nối Bluetooth.\n\nReset thiết bị hoặc bluetooth nếu hệ thống không tìm được bluetooth</string>
    <string name="error_bluetooth_restart">Bluetooth hệ thống không khả dụng \nRestart bluetooth hoặc thiết bị</string>
    <string name="error_unknown_error">Lỗi không xác định</string>
    <string name="error_unknown_position_data_ble">Vị trí không xác định</string>
    <string name="error_not_find_video">Không tìm thấy video</string>
    <string name="error_no_message">Không tìm thấy tin nhắn do =%d.Thêm vào một thiết bị khác.</string>
    <string name="connect_with_device">Kết nối với thiết bị</string>
    <string name="turn_on_your_bluetooth">Bật Bluetooth của bạn</string>
    <string name="connecting_ble_with_exercise_machine">Đang kết nối Bluetooth với máy tập</string>
    <string name="connected_ble_with_exercise_machine">Đã kết nối Bluetooth với máy tập</string>
    <string name="disconnecting_ble_with_exercise_machine">Đang ngắt kết nối Bluetooth với máy tập</string>
    <string name="disconnected_ble_with_exercise_machine">Đã ngắt kết nối Bluetooth với máy tập</string>
    <string name="bluetooth_is_not_connected_to_the_exercise_machine">Chưa kết nối Bluetooth với máy tập</string>
    <string name="connect">Kết nối</string>
    <string name="connected">Đã kết nối</string>
    <string name="ble_connected_with">Đã kết nối với %s</string>
    <string name="connecting">Đang kết nối</string>
    <string name="searching">Đang tìm kiếm</string>
    <string name="ble_connecting_with">Đang kết nối với thiết bị %s</string>
    <string name="disconnect">Ngắt kết nối</string>
    <string name="disconnecting">Đang ngắt kết nối</string>
    <string name="disconnected">Đã ngắt kết nối</string>
    <string name="feature_not_available">Tính năng không khả dụng</string>
    <string name="data_practice_not_available">Dữ liệu bài tập không khả dụng</string>
    <string name="data_not_available">Oops.\nDữ liệu không chính xác.Vui lòng thử lại</string>
    <string name="title_practice">Tập luyện</string>
    <string name="title_information">Thông tin</string>
    <string name="title_question_answer">Hỏi đáp</string>
    <string name="coach">Huấn luyện viên</string>
    <string name="end">Kết thúc</string>
    <string name="my_exercise">Bài tập của tôi</string>
    <string name="draft_exercise">Bài tập nháp</string>
    <string name="create_exercise_new">Tạo bài tập mới</string>
    <string name="create_course_new">Tạo khóa học mới</string>
    <string name="label_or">Hoặc</string>
    <string name="label_register">Đăng ký</string>
    <string name="label_register_account">Đăng ký tài khoản</string>
    <string name="hint_full_name">Họ và tên</string>
    <string name="hint_confirm_password">Xác nhận mật khẩu</string>
    <string name="label_camera">Máy ảnh</string>
    <string name="label_gallery">Thư viện</string>
    <string name="label_sign_in_with_facebook">Đăng nhập với Facebook</string>
    <string name="label_sign_in_with_google">Đăng nhập với Google</string>
    <string name="question_navigate_register">Chưa có tài khoản? Đăng ký </string>
    <string name="question_navigate_login">Đã có tài khoản? Đăng Nhập </string>
    <string name="label_favorite_subject">Bộ môn muốn theo</string>
    <string name="label_continue">Tiếp tục</string>
    <string name="label_back">Quay lại</string>
    <string name="label_date_of_birth">Ngày sinh</string>
    <string name="label_day">Ngày</string>
    <string name="label_week">Tuần</string>
    <string name="label_month">Tháng</string>
    <string name="label_year">Năm</string>
    <string name="label_weight">Cân nặng</string>
    <string name="label_height">Chiều cao</string>
    <string name="label_select_gender">Chọn giới tính</string>
    <string name="gender_male">Nam</string>
    <string name="gender_female">Nữ</string>
    <string name="label_setup_avatar">Cài đặt ảnh đại diện</string>
    <string name="hint_setup_avatar">Chụp ảnh hoặc dùng ảnh trong thư viện</string>
    <string name="label_name">Tên</string>
    <string name="label_profile">Hồ sơ</string>
    <string name="label_index">Chỉ số</string>
    <string name="label_gender">Giới tính</string>
    <string name="label_trophy">Danh hiệu</string>
    <string name="hint_new_password">Mật khẩu mới</string>
    <string name="label_change_password">Đổi mật khẩu</string>
    <string name="label_login_your_account">Đăng nhập tài khoản của bạn</string>
    <string name="label_confirm">Xác nhận</string>
    <string name="label_cancel">HỦY</string>
    <string name="error_empty_new_password">Vui lòng nhập vào mật khẩu mới</string>
    <string name="error_empty_confirm_new_password">Vui lòng xác nhận mật khẩu mới của bạn</string>
    <string name="hint_old_password">Mật khẩu cũ</string>
    <string name="label_forgot_password">Quên mật khẩu</string>
    <string name="hint_forgot_password">Nhập Email của bạn để nhận\nmã xác nhận</string>
    <string name="label_send_code">Gửi mã xác nhận</string>
    <string name="hint_input_code">Nhập mã xác nhận</string>
    <string name="errror_empty_code">Vui lòng nhập vào mã xác nhận được gửi về email của bạn.</string>
    <string name="label_alert">Thông báo</string>
    <string name="question_logout">Bạn có muốn đăng xuất?</string>
    <string name="label_accept">Đồng ý</string>
    <string name="error_empty_old_password">Vui lòng nhập vào mật khẩu cũ</string>
    <string name="welcome_back">Chào mừng quay trở lại</string>
    <string name="login_with_your_account">Đăng nhập tài khoản của bạn</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="gender_other">Khác</string>
    <string name="error_require_select_gender">Vui lòng chọn giới tính của bạn</string>
    <string name="you_are_not_connected_to_the_device">Bạn chưa kết nối với thiết bị</string>
    <string name="skip">Bỏ qua</string>
    <string name="you_are_not_connected_to_bluetooth_to_use_this_feature">Bạn chưa kết nối với Bluetooth để sử dụng tính năng này</string>
    <string name="save_exercise">Lưu bài</string>
    <string name="accuracy">Độ chính xác</string>
    <string name="no_data">Chưa có dữ liệu</string>
    <string name="start_practicing">Bắt đầu tập</string>
    <string name="your_video_is_saved">Video của bạn đã được lưu vào</string>
    <string name="header">Tiêu đề</string>
    <string name="enter_header">Nhập tiêu đề</string>
    <string name="label_delete">Xóa</string>
    <string name="full_name">Họ và tên</string>
    <string name="enter_full_name">Nhập họ và tên</string>
    <string name="enter_address_email">Nhập địa chỉ email</string>
    <string name="phone">SDT</string>
    <string name="enter_your_phone">Nhập số điện thoại</string>
    <string name="i_agree_to_the_terms_of_service">Tôi đồng ý với điều khoản dịch vụ</string>
    <string name="video_edit">Biên tập video</string>
    <string name="video_confirm_delete">Bạn có muốn xóa điểm chọn này không ?</string>
    <string name="select_folder">Chọn thư mục</string>
    <string name="create_exercise">Tạo bài tập</string>
    <string name="add_to_exercise_draft">Thêm vào bài tập nháp</string>
</resources>