<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_state"
        android:title="@string/home" />
    <item
        android:id="@+id/practice"
        android:icon="@drawable/ic_practice_state"
        android:title="@string/practice" />
    <item
        android:id="@+id/challenge"
        android:icon="@drawable/ic_challenge_state"
        android:title="@string/challenge" />
    <item
        android:id="@+id/news"
        android:icon="@drawable/ic_news_state"
        android:title="@string/news" />
    <item
        android:id="@+id/notification"
        android:icon="@drawable/ic_notification_state"
        android:title="@string/notification" />
</menu>