<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clr_background"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbarCoachRegister"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/clr_tab"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBackCoachRegister"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="@dimen/space_12"
            android:src="@drawable/ic_back" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/logo_slogan_transparent_small" />
    </RelativeLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lnRegisterCoachIntroduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_16"
        android:layout_marginTop="@dimen/space_16"
        android:layout_marginEnd="@dimen/space_16"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarCoachRegister">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/label_register"
            android:textAllCaps="true"
            android:textAppearance="@style/FontAnTon"
            android:textSize="@dimen/text_18" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/coach"
            android:textAllCaps="true"
            android:textAppearance="@style/FontAnTon"
            android:textSize="@dimen/text_24" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_16"
        android:layout_marginEnd="@dimen/space_16"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnRegisterCoachIntroduction"
        app:layout_constraintVertical_bias="0.2">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtInputFullNameCoach"
            style="@style/EditTextBasic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4"
            android:background="@color/white"
            android:hint="@string/enter_full_name"
            android:imeOptions="actionNext" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8"
            android:text="@string/email" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtInputEmailCoach"
            style="@style/EditTextBasic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4"
            android:background="@color/white"
            android:hint="@string/enter_address_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8"
            android:text="@string/phone" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtInputYourPhoneCoach"
            style="@style/EditTextBasic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4"
            android:background="@color/white"
            android:hint="@string/enter_your_phone"
            android:imeOptions="actionDone"
            android:inputType="phone" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cbAgreeTermOfServiceCoach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginBottom="@dimen/space_8"
            android:buttonTint="@color/white"
            android:minHeight="0dp"
            android:text="@string/i_agree_to_the_terms_of_service"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegisterCoach"
            style="@style/ButtonGradientOrange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_register"
            android:textSize="@dimen/text_18" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>