<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_16"
        android:background="@color/clr_tab"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_20"
            android:text="@string/your_video_is_saved" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTitleVideoSaved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_4"
            android:text="@string/draft_exercise"
            android:textAppearance="@style/FontAnTon"
            android:textSize="@dimen/text_18" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirmSaveDraft"
            style="@style/ButtonGradientOrange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_20"
            android:text="@string/label_confirm"
            android:textAllCaps="false"
            android:textSize="@dimen/text_12" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>