<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clr_background"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/clr_tab">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBackCoachSaveDraft"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="@dimen/space_16"
            android:src="@drawable/ic_back" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/space_12">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:textAppearance="@style/FontAnTon"
            android:textSize="@dimen/text_14" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtHeaderDraftCoach"
            style="@style/EditTextBasic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/enter_header"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textSize="@dimen/text_12" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_12"
            android:text="@string/select_folder"
            android:textAppearance="@style/FontAnTon"
            android:textSize="@dimen/text_14" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtSelectFolderCoach"
            style="@style/EditTextBasic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableEnd="@drawable/ic_next"
            android:hint="@string/select_folder"
            android:textColor="@color/clr_tab"
            android:textSize="@dimen/text_14"
            app:drawableTint="@color/clr_tab" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCreateExerciseCoach"
            style="@style/ButtonGradientOrange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_20"
            android:text="@string/create_exercise"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddToExerciseDraftCoach"
            style="@style/ButtonGradientOrange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_12"
            android:background="@color/clr_tab"
            android:text="@string/add_to_exercise_draft"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>