<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="@dimen/space_16"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/clr_tab">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="@dimen/space_8"
                android:text="@string/connect_with_device"
                android:textAllCaps="true" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnDismissBleDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/space_8"
                app:srcCompat="@drawable/ic_cancel" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_gravity="center"
            android:padding="@dimen/space_16"
            app:srcCompat="@drawable/ic_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/you_are_not_connected_to_the_device"
            android:textColor="@color/clr_tab" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConnectBleDialog"
            style="@style/ButtonGradientOrange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16"
            android:text="@string/connect" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnSkipConnectBleDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/space_8"
            android:text="@string/skip"
            android:textColor="@color/clr_tab"
            android:textSize="@dimen/text_10" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>