<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@color/white"
        android:elevation="@dimen/_2sdp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/FontAnTon"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/video_confirm_delete"
            android:textAllCaps="true"
            android:textColor="@color/clr_tab"
            android:textSize="@dimen/text_14" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtDeleteFight"
            style="@style/FontAnTon"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:background="@color/clr_red"
            android:gravity="center"
            android:paddingTop="@dimen/_4sdp"
            android:paddingBottom="@dimen/_4sdp"
            android:text="@string/label_delete"
            android:textColor="@color/white"
            android:textSize="@dimen/text_12" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtSkipFight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E5E5E5"
            android:gravity="center"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/skip"
            android:textColor="@color/clr_tab"
            android:textSize="@dimen/text_10" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>